# Code_Gen_C

./: .gitignore  ArgumentParser.cpp  BeispielArgumentParser.cpp  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Example.xml  MyDOMVIEW.h  README.md  TestsNewFile.cpp  TestsNewFile.h  check.cpp  check.h  filename.cpp  filename.h  generated.cpp  main.cpp  mainTestGenerated  mainTestGenerated.cpp  newFile.cpp  newFile.h  students.xml  textCheck.cpp  vscode.txt  xmlCh.h  xml_parser.cpp  xml_parser.h
C_Code_Gen/: CMakeGen.cpp  CMakeGen.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Example.xml  Example.xml.bak  README.md  READMEFORDOXYGEN.md  check.cpp  check.h  filename.cpp  main.cpp  mainGenerator.cpp  mainGenerator.h  newFile.cpp  newFile.h  oldXMLParser.cpp  oldXMLParser.h  printHelp.cpp  sort_option_names.cpp  vscode.txt  xml_parser.cpp  xml_parser.h
C_Code_Gen/headerFiles/: CMakeGen.h  CodeGenerator.h  check.h  mainGenerator.h  xmlCh.h  xml_parser.h
C_Code_Gen/html/: _c_make_gen_8h_source.html  _code_generator_8h_source.html  annotated.html  check_8h_source.html  class_c_make_gen.html  class_code.html  class_help-members.html  class_help.html  class_sort-members.html  class_sort.html  classcheck.html  classes.html  classmain_generator.html  classparse_1_1get_opts_parse-members.html  classparse_1_1get_opts_parse.html  classxml__parser-members.html  classxml__parser.html  filename_8h_source.html  files.html  functions.html  functions_func.html  main_generator_8h_source.html  structxml__parser_1_1_author.html  structxml__parser_1_1_block-members.html  structxml__parser_1_1_block.html  structxml__parser_1_1_class_name.html  structxml__parser_1_1_get_opt_setup.html  structxml__parser_1_1_header_file_name.html  structxml__parser_1_1_name_space.html  structxml__parser_1_1_option.html  structxml__parser_1_1_options-members.html  structxml__parser_1_1_options.html  structxml__parser_1_1_over_all_description.html  structxml__parser_1_1_sample.html  structxml__parser_1_1_sample_usage.html  structxml__parser_1_1_source_file_name-members.html  structxml__parser_1_1_source_file_name.html  xml__parser_8h_source.html
C_Code_Gen/html/search/: all_5.js  all_b.js  classes_8.js  classes_9.js  functions_0.js  functions_4.js
C_Code_Gen/latex/: _c_make_gen_8h_source.tex  _code_generator_8h_source.tex  annotated.tex  check_8h_source.tex  class_c_make_gen.tex  class_code.tex  class_help.tex  class_sort.tex  classcheck.tex  classmain_generator.tex  classparse_1_1get_opts_parse.tex  classxml__parser.tex  filename_8h_source.tex  files.tex  main_generator_8h_source.tex  refman.tex  structxml__parser_1_1_author.tex  structxml__parser_1_1_block.tex  structxml__parser_1_1_class_name.tex  structxml__parser_1_1_get_opt_setup.tex  structxml__parser_1_1_header_file_name.tex  structxml__parser_1_1_name_space.tex  structxml__parser_1_1_option.tex  structxml__parser_1_1_options.tex  structxml__parser_1_1_over_all_description.tex  structxml__parser_1_1_sample.tex  structxml__parser_1_1_sample_usage.tex  structxml__parser_1_1_source_file_name.tex  xml__parser_8h_source.tex
C_Code_Gen/sourceFiles/: CMakeGen.cpp  CodeGenerator.cpp  check.cpp  main.cpp  mainGenerator.cpp  xml_parser.cpp
Doxygen/: Doxyfile
Doxygen/html/: _c_make_gen_8cpp.html  _c_make_gen_8h.html  _c_make_gen_8h.js  _c_make_gen_8h_source.html  _code_generator_8cpp.html  _code_generator_8h.html  _code_generator_8h.js  _code_generator_8h_source.html  _l_i_c_e_n_s_e_8md.html  annotated.html  annotated_dup.js  check_8cpp.html  check_8h.html  check_8h.js  check_8h_source.html  class_c_make_gen-members.html  class_c_make_gen.html  class_c_make_gen.js  class_code-members.html  class_code.html  class_code.js  class_help-members.html  class_help.html  class_help.js  class_sort-members.html  class_sort.html  class_sort.js  class_str_x.html  class_x_str-members.html  class_x_str.html  classcheck-members.html  classcheck.html  classcheck.js  classes.html  classmain_generator-members.html  classmain_generator.html  classmain_generator.js  classparse_1_1get_opts_parse-members.html  classparse_1_1get_opts_parse.html  classparse_1_1get_opts_parse.js  (+351 more)
Doxygen/latex/: _c_make_gen_8cpp.tex  _c_make_gen_8h.tex  _c_make_gen_8h_source.tex  _code_generator_8cpp.tex  _code_generator_8h.tex  _code_generator_8h_source.tex  _l_i_c_e_n_s_e_8md.tex  annotated.tex  check_8cpp.tex  check_8h.tex  check_8h_source.tex  class_c_make_gen.tex  class_code.tex  class_help.tex  class_sort.tex  class_str_x.tex  class_x_str.tex  classcheck.tex  classmain_generator.tex  classparse_1_1get_opts_parse.tex  classpugi_1_1xml__attribute.tex  classpugi_1_1xml__attribute__iterator.tex  classpugi_1_1xml__document.tex  classpugi_1_1xml__named__node__iterator.tex  classpugi_1_1xml__node.tex  classpugi_1_1xml__node__iterator.tex  classpugi_1_1xml__object__range.tex  classpugi_1_1xml__text.tex  classpugi_1_1xml__tree__walker.tex  classpugi_1_1xml__writer.tex  classpugi_1_1xml__writer__file.tex  classpugi_1_1xml__writer__stream.tex  classpugi_1_1xpath__exception.tex  classpugi_1_1xpath__node.tex  classpugi_1_1xpath__node__set.tex  classpugi_1_1xpath__query.tex  classpugi_1_1xpath__variable.tex  classpugi_1_1xpath__variable__set.tex  classxml__buffered__writer.tex  classxml__parser.tex  (+99 more)
DoxygenDocu_C_Code_Gen/html/: _c_make_gen_8h_source.html  _code_generator_8h_source.html  annotated.html  check_8h_source.html  class_c_make_gen-members.html  class_c_make_gen.html  class_code-members.html  class_code.html  class_str_x-members.html  class_str_x.html  class_x_str-members.html  class_x_str.html  classcheck-members.html  classcheck.html  classes.html  classmain_generator-members.html  classmain_generator.html  classxml__parser-members.html  classxml__parser.html  files.html  functions.html  index.html  (+33 more)
exampleProject/: CMakeLists.txt  exampleMain.cpp  options.cpp  options.h
generatedWorking/: NewFile.cpp  NewFile.h
newFiles/: CMakeLists.txt
newFiles/Test/: CMakeLists.txt  TestsNewFile.cpp  TestsNewFile.h  example.cpp  mainTestGenerated.cpp  newFile.cpp  newFile.h  options.cpp  options.h
(+183 files in other folders)
